# mathparser

./: README.md  meson.build
include/mathparser/: error.h  lexer.h  mathparser.h  parser.h  types.h
src/: error.cpp  lexer.cpp  mathparser.cpp  parser.cpp  types.cpp
